--- a/Ludens.BusinessLogic/Ludens.BusinessLogic.csproj
+++ b/Ludens.BusinessLogic/Ludens.BusinessLogic.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ludens.DataAccess\Ludens.DataAccess.csproj" />
+    <ProjectReference Include="..\Ludens.Shared\Ludens.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
