--- a/Ludens.DataAccess/Ludens.DataAccess.csproj
+++ b/Ludens.DataAccess/Ludens.DataAccess.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ludens.Core\Ludens.Core.csproj" />
+  </ItemGroup>
+
 </Project>
